--- a/mprf/templates/home.html
+++ b/mprf/templates/home.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MPRF Request Form</title>
+    <title>Employee Management</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
@@ -14,13 +14,13 @@
     background:url("{% static './img/home-pic-hr.jpg' %}") no-repeat center center fixed;
     background-size: cover;
     min-height: 100vh;
-}
+    }
 </style>
 <body>
 
     <div class="navbar">
         <div class="logo"> <img src="{% static 'img/hr-logo.webp' %}"alt="HR Logo" 
-        style="height: 45px; width: 55px; border-radius: 50%; box-shadow: 0 2px 8px rgba(42,67,101,0.10);"> HR Portal</div>
+        style="height: 45px; width: 55px; border-radius: 50%; box-shadow: 0 2px 8px rgba(42,67,101,0.10);"><span>Employee Management</span></div>
        
         <div class="nav-links">
             <a href="#">About Us</a>
